@@ -39,10 +39,10 @@
 #define OPTION_ASM             "--asm="
 #define OPTION_NO_STD_CRT0     "--no-std-crt0"
 #define OPTION_RESERVE_IY      "--reserve-regs-iy"
-#define OPTION_MAX_ALLOCS_N    "--max-allocs-per-node"
 #define OPTION_OPTRALLOC_ALL   "--optralloc-all"
 #define OPTION_OPTRALLOC_HL    "--optralloc-hl"
 #define OPTION_DUMP_GRAPHS     "--dump-graphs"
+#define OPTION_MAX_ALLOCS_NODE "--max-allocs-per-node"
 
 static char _z80_defaultRules[] =
 {
@@ -67,7 +67,7 @@ static OPTION _z80_options[] =
     { 0, OPTION_CONST_SEG,       &options.const_seg, "<name> use this name for the const segment", CLAT_STRING },
     { 0, OPTION_NO_STD_CRT0,     &options.no_std_crt0, "For the z80/gbz80 do not link default crt0.rel"},
     { 0, OPTION_RESERVE_IY,      &z80_opts.reserveIY, "Do not use IY" },
-    { 0, OPTION_MAX_ALLOCS_N,    &z80_opts.max_allocs_per_node, "Maximum number of register assignments considered at each node of the tree decomposition", CLAT_INTEGER},
+    { 0, OPTION_MAX_ALLOCS_NODE, &options.max_allocs_per_node, "Maximum number of register assignments considered at each node of the tree decomposition", CLAT_INTEGER},
     { 0, OPTION_OPTRALLOC_ALL,   &z80_opts.optralloc_all, "Use new register allocator for all registers" },
     { 0, OPTION_OPTRALLOC_HL,    &z80_opts.optralloc_hl, "Use new register allocator for HL instead of A" },
     { 0, OPTION_DUMP_GRAPHS,     &z80_opts.dump_graphs, "Dump control flow graph, conflict graph and tree decomposition in register allocator"},
@@ -82,7 +82,7 @@ static OPTION _gbz80_options[] =
     { 0, OPTION_CODE_SEG,        &options.code_seg, "<name> use this name for the code segment", CLAT_STRING },
     { 0, OPTION_CONST_SEG,       &options.const_seg, "<name> use this name for the const segment", CLAT_STRING },
     { 0, OPTION_NO_STD_CRT0,     &options.no_std_crt0, "For the z80/gbz80 do not link default crt0.rel"},
-    { 0, OPTION_MAX_ALLOCS_N,    &z80_opts.max_allocs_per_node, "Maximum number of register assignments considered at each node of the tree decomposition", CLAT_INTEGER},
+    { 0, OPTION_MAX_ALLOCS_NODE, &options.max_allocs_per_node, "Maximum number of register assignments considered at each node of the tree decomposition", CLAT_INTEGER},
     { 0, OPTION_DUMP_GRAPHS,     &z80_opts.dump_graphs, "Dump control flow graph, conflict graph and tree decomposition in register allocator"},
     { 0, NULL }
   };
@@ -596,7 +596,7 @@ _setDefaultOptions (void)
   optimize.label4 = 1;
   optimize.loopInvariant = 1;
   optimize.loopInduction = 1;
-  z80_opts.max_allocs_per_node = 50000;
+  options.max_allocs_per_node = 50000;
   z80_opts.optralloc_all = 0;
   z80_opts.optralloc_hl = 0;
 }
