@@ -21,7 +21,6 @@ typedef struct
     int port_mode;
     int port_back;
     int reserveIY;
-    int max_allocs_per_node;
     int optralloc_all;
     int optralloc_hl;
     int dump_graphs;
